2005-04-08  smeghead     * Added NativeBigInteger benchmark to scripts/i2pbench.sh.
Monotone-Parent: eee1d3a628ab79c8cb56b4e867c96fe260771dc3
Monotone-Revision: 55c2286e75878fb8039f4499abd0d47d45d4ec0f

Monotone-Author: smeghead
Monotone-Date: 2005-04-09T03:16:05
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.189 2005/04/06 10:43:25 jrandom Exp $
+$Id: history.txt,v 1.190 2005/04/08 07:39:20 smeghead Exp $
+
+2005-04-08  smeghead
+    * Added NativeBigInteger benchmark to scripts/i2pbench.sh.
 
 2005-04-08  smeghead
     * Security improvements to TrustedUpdate: signing and verification of the
