2005-04-12  jrandom     * Make sure we don't get cached updates (thanks smeghead!)     * Clear out the callback for the TestJob after it passes (only affects the       job timing accounting)
Monotone-Parent: 20940abab23c77f159c15577e66ace7ffb3adfa3
Monotone-Revision: 66a18e51226be77d1c9f806ff1583232508da5e7

Monotone-Author: jrandom
Monotone-Date: 2005-04-12T15:22:11
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.190 2005/04/08 07:39:20 smeghead Exp $
+$Id: history.txt,v 1.191 2005/04/08 22:16:05 smeghead Exp $
+
+2005-04-12  jrandom
+    * Make sure we don't get cached updates (thanks smeghead!)
+    * Clear out the callback for the TestJob after it passes (only affects the
+      job timing accounting)
 
 2005-04-08  smeghead
     * Added NativeBigInteger benchmark to scripts/i2pbench.sh.
