2005-04-16  jrandom     * Migrated to Bouncycastle's SHA256 and HMAC implementations for efficiency (also lots of udp fixes)
Monotone-Parent: 0e92fbc0bd015d7cf54265703dddf5811f3f4dd8
Monotone-Revision: c26e28e415733428db19c294bfe3e283d2be7943

Monotone-Author: jrandom
Monotone-Date: 2005-04-17T00:59:48
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.191 2005/04/08 22:16:05 smeghead Exp $
+$Id: history.txt,v 1.192 2005/04/12 10:22:11 jrandom Exp $
+
+2005-04-16  jrandom
+    * Migrated to Bouncycastle's SHA256 and HMAC implementations for efficiency
 
 2005-04-12  jrandom
     * Make sure we don't get cached updates (thanks smeghead!)
