2005-04-17  zzz     * Added new user-editable eepproxy error page templates. 2005-04-17  jrandom     * Revamp the tunnel building throttles, fixing a situation where the       rebuild may not recover, and defaulting it to unthrottled (users with       slow CPUs may want to set "router.tunnel.shouldThrottle=true" in their       advanced router config)
Monotone-Parent: 3ad491e890c2fc5720c1b318cde5d8b7fd2681db
Monotone-Revision: acb3313f89011ef7a9162919d56a7bcd20e7d20a

Monotone-Author: jrandom
Monotone-Date: 2005-04-17T23:23:20
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,13 @@
-$Id: history.txt,v 1.192 2005/04/12 10:22:11 jrandom Exp $
+$Id: history.txt,v 1.193 2005/04/16 19:59:51 jrandom Exp $
+
+2005-04-17  zzz
+    * Added new user-editable eepproxy error page templates.
+
+2005-04-17  jrandom
+    * Revamp the tunnel building throttles, fixing a situation where the 
+      rebuild may not recover, and defaulting it to unthrottled (users with
+      slow CPUs may want to set "router.tunnel.shouldThrottle=true" in their
+      advanced router config)
 
 2005-04-16  jrandom
     * Migrated to Bouncycastle's SHA256 and HMAC implementations for efficiency
