2005-04-24  jrandom     * Added a pool of PRNGs using a different synchronization technique,       hopefully sufficient to work around IBM's PRNG bugs until we get our       own Fortuna.     * In the streaming lib, don't jack up the RTT on NACK, and have the window       size bound the not-yet-ready messages to the peer, not the unacked       message count (not sure yet whether this is worthwile).     * Many additions to the messageHistory log.     * Handle out of order tunnel fragment delivery (not an issue on the live       net with TCP, but critical with UDP). and for udp stuff: * implemented tcp-esque rto code in the udp transport * make sure we don't ACK too many messages at once * transmit fragments in a simple (nonrandom) order so that we can more easily   adjust timeouts/etc. * let the active outbound pool grow dynamically if there are outbound slots to   spare * use a simple decaying bloom filter at the UDP level to drop duplicate resent   packets.
Monotone-Parent: 2e1b0a840c42e8eba8bf7ee32d322fb5f4649e99
Monotone-Revision: 330b11a0dce6021d25b39142f33aa4fdec5ed237

Monotone-Author: jrandom
Monotone-Date: 2005-04-24T18:42:02
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,15 @@
-$Id: history.txt,v 1.196 2005/04/20 14:15:28 jrandom Exp $
+$Id: history.txt,v 1.197 2005/04/20 15:14:17 jrandom Exp $
+
+2005-04-24  jrandom
+    * Added a pool of PRNGs using a different synchronization technique, 
+      hopefully sufficient to work around IBM's PRNG bugs until we get our
+      own Fortuna.
+    * In the streaming lib, don't jack up the RTT on NACK, and have the window
+      size bound the not-yet-ready messages to the peer, not the unacked 
+      message count (not sure yet whether this is worthwile).
+    * Many additions to the messageHistory log.
+    * Handle out of order tunnel fragment delivery (not an issue on the live 
+      net with TCP, but critical with UDP).
 
 * 2005-04-20  0.5.0.7 released
 
