2005-04-25  smeghead     * Added button to router console for manual update checks.     * Fixed bug in configupdate.jsp that caused the proxy port to be updated       every time the form was submitted even if it hadn't changed.
Monotone-Parent: 209cc9cd3ea7fdbbaaa2d0517bc1b18873b986a0
Monotone-Revision: ca6a10db77a4ebd22ac268a014ab0f3db08acdd2

Monotone-Author: smeghead
Monotone-Date: 2005-04-26T02:59:23
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.197 2005/04/20 15:14:17 jrandom Exp $
+$Id: history.txt,v 1.198 2005/04/24 13:42:05 jrandom Exp $
+
+2005-04-25  smeghead
+    * Added button to router console for manual update checks.
+    * Fixed bug in configupdate.jsp that caused the proxy port to be updated
+      every time the form was submitted even if it hadn't changed.
 
 2005-04-24  jrandom
     * Added a pool of PRNGs using a different synchronization technique, 
