--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,14 @@
-$Id: history.txt,v 1.198 2005/04/24 13:42:05 jrandom Exp $
+$Id: history.txt,v 1.199 2005/04/25 21:59:23 smeghead Exp $
+
+2005-04-28  jrandom
+    * More fixes for the I2PTunnel "other" interface handling (thanks nelgin!)
+    * Add back the code to handle bids from multiple transports (though there
+      is still only one transport enabled by default)
+    * Adjust the router's queueing of outbound client messages when under 
+      heavy load by running the preparatory job in the client's I2CP handler
+      thread, thereby blocking additional outbound messages when the router is
+      hosed.
+    * No need to validate or persist a netDb entry if we already have it
 
 2005-04-25  smeghead
     * Added button to router console for manual update checks.
