2005-04-29  jrandom     * Reduce the peer profile stat coallesce overhead by inlining it with the       reorganize.     * Limit each transport to at most one address (any transport that requires       multiple entry points can include those alternatives in the address). udp stuff: * change the UDP transport's style from "udp" to "SSUv1" * keep track of each peer's skew * properly handle session reestablishment over an existing session, rather   than requiring both sides to expire first
Monotone-Parent: 142f2881b304b7fa479ef7fb2e1e6250e649beee
Monotone-Revision: e8cf3d4ba7dc249bc52385b476d2656d7ed95bb5

Monotone-Author: jrandom
Monotone-Date: 2005-04-29T06:24:12
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.199 2005/04/25 21:59:23 smeghead Exp $
+$Id: history.txt,v 1.200 2005/04/28 16:54:27 jrandom Exp $
+
+2005-04-29  jrandom
+    * Reduce the peer profile stat coallesce overhead by inlining it with the 
+      reorganize.
+    * Limit each transport to at most one address (any transport that requires
+      multiple entry points can include those alternatives in the address).
 
 2005-04-28  jrandom
     * More fixes for the I2PTunnel "other" interface handling (thanks nelgin!)
