2005-04-30  jrandom     * Reduced some SimpleTimer churn * add hooks for per-peer choking in the outbound message queue - if/when a   peer reaches their cwin, no further messages will enter the 'active' pool   until there are more bytes available.  other messages waiting (either later   on in the same priority queue, or in the queues for other priorities) may   take that slot. * when we have a message acked, release the acked size to the congestion   window (duh), rather than waiting for the second to expire and refill the   capacity. * send packets in a volley explicitly, waiting until we can allocate the full   cwin size for that message
Monotone-Parent: 1baef7cf35ec397f7e1cd669a9993c2415bdea36
Monotone-Revision: d1a5a50ebb7ec9f21b3e4c08890df507bf088634

Monotone-Author: jrandom
Monotone-Date: 2005-04-30T23:26:18
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.200 2005/04/28 16:54:27 jrandom Exp $
+$Id: history.txt,v 1.201 2005/04/29 01:24:15 jrandom Exp $
+
+2005-04-30  jrandom
+    * Reduced some SimpleTimer churn
 
 2005-04-29  jrandom
     * Reduce the peer profile stat coallesce overhead by inlining it with the 
