2005-05-01  jrandom     * Cleaned up the peers page a bit more. more udp stuff: * add new config option: i2np.udp.alwaysPreferred=true to adjust the bidding   so that UDP is picked first, even if a TCP connection exists * fixed the initial clock skew problem (duh) * reduced the MTU to 576 (largest nearly-universally-safe, and allows a   tunnel message in 2 fragments) * handle some races @ connection establishment (thanks duck!) * if there are more ACKs than we can send in a packet, reschedule another   ACK immediately
Monotone-Parent: 0dedfbf6ddfaeddc0c0a83f35e56ee4a8f4229b0
Monotone-Revision: c03d9086823e91b567aefab2202b10f3ba1bbb84

Monotone-Author: jrandom
Monotone-Date: 2005-05-01T17:21:48
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.202 2005/04/30 18:26:19 jrandom Exp $
+$Id: history.txt,v 1.203 2005/04/30 19:48:15 jrandom Exp $
+
+2005-05-01  jrandom
+    * Cleaned up the peers page a bit more.
 
 2005-04-30  jrandom
     * Added a small new page to the web console (/peers.jsp) which contains 
