2005-05-01  jrandom     * Added a substantial optimization to the AES engine by caching the       prepared session keys (duh).
Monotone-Parent: c9e38a4fee915a1b25118b64bddafb28991b7d5e
Monotone-Revision: 6656d4afe961ba5df34f19fa8a9cdb14f2ea39d4

Monotone-Author: jrandom
Monotone-Date: 2005-05-02T02:35:16
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.203 2005/04/30 19:48:15 jrandom Exp $
+$Id: history.txt,v 1.204 2005/05/01 12:21:50 jrandom Exp $
+
+2005-05-01  jrandom
+    * Added a substantial optimization to the AES engine by caching the
+      prepared session keys (duh).
 
 2005-05-01  jrandom
     * Cleaned up the peers page a bit more.
