2005-05-25  duck     * Fixed PRNG bug (bugzilla #107)
Monotone-Parent: ad54fa0640cd71f694b4583d584d5c7848b58cca
Monotone-Revision: ba8675e92feec9e2c773dba17e66a6c85f1bf5ab

Monotone-Author: duck
Monotone-Date: 2005-05-25T21:32:38
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.204 2005/05/01 12:21:50 jrandom Exp $
+$Id: history.txt,v 1.205 2005/05/01 21:35:16 jrandom Exp $
+
+2005-05-25  duck
+    * Fixed PRNG bug (bugzilla #107)
 
 2005-05-01  jrandom
     * Added a substantial optimization to the AES engine by caching the
