--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,22 @@
-$Id: history.txt,v 1.205 2005/05/01 21:35:16 jrandom Exp $
+$Id: history.txt,v 1.206 2005/05/25 16:32:38 duck Exp $
+
+2005-07-04  jrandom
+    * Within the tunnel, use xor(IV, msg[0:16]) as the flag to detect dups, 
+      rather than the IV by itself, preventing an attack that would let 
+      colluding internal adversaries tag a message to determine that they are
+      in the same tunnel.  Thanks dvorak for the catch!
+    * Drop long inactive profiles on startup and shutdown
+    * /configstats.jsp: web interface to pick what stats to log
+    * Deliver more session tags to account for wider window sizes
+    * Cache some intermediate values in our HMACSHA256 and BC's HMAC
+    * Track the client send rate (stream.sendBps and client.sendBpsRaw)
+    * UrlLauncher: adjust the browser selection order
+    * I2PAppContext: hooks for dummy HMACSHA256 and a weak PRNG
+    * StreamSinkClient: add support for sending an unlimited amount of data
+    * Migrate the tests out of the default build jars
+
+2005-06-22  Comwiz
+    * Migrate the core tests to junit
 
 2005-05-25  duck
     * Fixed PRNG bug (bugzilla #107)
