--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.208 2005/07/05 17:08:56 jrandom Exp $
+$Id: history.txt,v 1.209 2005/07/11 18:06:23 jrandom Exp $
+
+2005-07-12  jrandom
+    * Add some data duplication to avoid a recently injected concurrency problem 
+      in the session tag manager (thanks redzara and romster).
 
 2005-07-11  jrandom
     * Reduced the growth factor on the slow start and congestion avoidance for
