2005-07-13  jrandom     * Fixed a long standing bug where we weren't properly comparing session       tags but instead largely depending upon comparing their hashCode,       causing intermittent decryption errors.
Monotone-Parent: 588b73164fe34a13e98cfa9aa97fd0a6b036ea24
Monotone-Revision: 1b5cf9b2d8ebfa0053b7d4a17786c73ceb76d29f

Monotone-Author: jrandom
Monotone-Date: 2005-07-13T18:20:43
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,8 +1,13 @@
-$Id: history.txt,v 1.209 2005/07/11 18:06:23 jrandom Exp $
+$Id: history.txt,v 1.210 2005/07/12 16:26:07 jrandom Exp $
+
+2005-07-13  jrandom
+    * Fixed a long standing bug where we weren't properly comparing session 
+      tags but instead largely depending upon comparing their hashCode, 
+      causing intermittent decryption errors.
 
 2005-07-12  jrandom
-    * Add some data duplication to avoid a recently injected concurrency problem 
-      in the session tag manager (thanks redzara and romster).
+    * Add some data duplication to avoid a recently injected concurrency 
+      problem in the session tag manager (thanks redzara and romster).
 
 2005-07-11  jrandom
     * Reduced the growth factor on the slow start and congestion avoidance for
