--- a/history.txt
+++ b/history.txt
@@ -1,12 +1,19 @@
-$Id: history.txt,v 1.212 2005/07/13 15:07:32 jrandom Exp $
+$Id: history.txt,v 1.213 2005/07/16 07:52:36 cervantes Exp $
+
+2005-07-19  jrandom
+    * Further preparation for removing I2CP crypto
+    * Added some validation to the DH key agreement (thanks $anon)
+    * Validate tunnel data message expirations (though not really a problem, 
+      since tunnels expire)
+    * Minor PRNG threading cleanup
 
 2005-07-15  cervantes
-	* Added workaround for an odd win32 bug in the stats configuration 
-	  console page which meant only the first checkbox selection was saved.
+    * Added workaround for an odd win32 bug in the stats configuration console
+      page which meant only the first checkbox selection was saved.
 
 2005-07-15  Romster
-	* Added per group selection toggles in the stats configuration console
-	  page.
+    * Added per group selection toggles in the stats configuration console 
+      page.
 
 2005-07-13  jrandom
     * Fixed a recently injected bug in the multitransport bidding which had 
