2005-07-20  jrandom     * Allow the user to specify an external port # for SSU even if the external       host isn't specified (thanks duck!)
Monotone-Parent: fa00fd8ae82b38f249b606d925a6bddd4316aef3
Monotone-Revision: e5cd1535b66c37d29b361fb598c94a7d23784b97

Monotone-Author: jrandom
Monotone-Date: 2005-07-20T19:24:47
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.213 2005/07/16 07:52:36 cervantes Exp $
+$Id: history.txt,v 1.214 2005/07/19 16:00:25 jrandom Exp $
+
+2005-07-20  jrandom
+    * Allow the user to specify an external port # for SSU even if the external
+      host isn't specified (thanks duck!)
 
 2005-07-19  jrandom
     * Further preparation for removing I2CP crypto
