2005-07-31  jrandom     * Adjust the netDb search and store per peer timeouts to match the average       measured per peer success times, rather than huge fixed values.     * Optimized and reverified the netDb peer selection / retrieval process       within the kbuckets.     * Drop TCP connections that don't have any useful activity in 10 minutes.     * If i2np.udp.fixedPort=true, never change the externally published port,       even if we are autodetecting the IP address. (also includes most of the new peer/NAT testing, but thats not used atm)
Monotone-Parent: c86b4f45d164a4a3b161c709e4d6a1144e409325
Monotone-Revision: b8f2ca37e648b2811c8f1ab92ddb8792fda35cd9

Monotone-Author: jrandom
Monotone-Date: 2005-07-31T21:35:26
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,13 @@
-$Id: history.txt,v 1.217 2005/07/22 19:15:59 jrandom Exp $
+$Id: history.txt,v 1.218 2005/07/27 14:06:11 jrandom Exp $
+
+2005-07-31  jrandom
+    * Adjust the netDb search and store per peer timeouts to match the average
+      measured per peer success times, rather than huge fixed values.
+    * Optimized and reverified the netDb peer selection / retrieval process 
+      within the kbuckets.
+    * Drop TCP connections that don't have any useful activity in 10 minutes.
+    * If i2np.udp.fixedPort=true, never change the externally published port,
+      even if we are autodetecting the IP address.
 
 * 2005-07-27  0.6 released
 
