2005-08-01  duck     * Fix an addressbook NPE when a new hostname from the master addressbook       didn't exist in the router addressbook.     * Fix an addressbook bug which caused subscriptions not to be parsed at       all. (Oops!)
Monotone-Parent: d9f3c6506685d4ec080813a437025a29c0b1b767
Monotone-Revision: 25b528deb35ee01727228f5c7d6e82187e52f05c

Monotone-Author: duck
Monotone-Date: 2005-08-01T13:35:11
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.218 2005/07/27 14:06:11 jrandom Exp $
+$Id: history.txt,v 1.219 2005/07/31 16:35:26 jrandom Exp $
+
+2005-08-01  duck
+    * Fix an addressbook NPE when a new hostname from the master addressbook
+      didn't exist in the router addressbook.
+    * Fix an addressbook bug which caused subscriptions not to be parsed at
+      all. (Oops!)
 
 2005-07-31  jrandom
     * Adjust the netDb search and store per peer timeouts to match the average
