* 2005-08-03  0.6.0.1 released 2005-08-03  jrandom     * Backed out an inadvertant change to the netDb store redundancy factor.     * Verify tunnel participant caching.     * Logging cleanup
Monotone-Parent: 8e6df3e6c3fa23634f4a53e2208561c6e28b8641
Monotone-Revision: 871a9c717187f1b1f9d40a54d22a7fedafba994e

Monotone-Author: jrandom
Monotone-Date: 2005-08-03T18:58:12
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p_0_6_0_1

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,11 @@
-$Id: history.txt,v 1.220 2005/08/01 08:35:11 duck Exp $
+$Id: history.txt,v 1.221 2005/08/01 22:26:51 duck Exp $
+
+* 2005-08-03  0.6.0.1 released
+
+2005-08-03  jrandom
+    * Backed out an inadvertant change to the netDb store redundancy factor.
+    * Verify tunnel participant caching.
+    * Logging cleanup
 
 2005-08-01  duck
     * Update IzPack to 3.7.2 (build 2005.04.22). This fixes bug #82.
