2005-08-08  jrandom     * Add a configurable throttle to the number of concurrent outbound SSU       connection negotiations (via i2np.udp.maxConcurrentEstablish=4).  This       may help those with slow connections to get integrated at the start.     * Further fixlets to the streaming lib
Monotone-Parent: b2e9868ccfed1c550c45107322f44a7bea2e0417
Monotone-Revision: 866383ac041e4de04b4ad1630497b7d46cc63022

Monotone-Author: jrandom
Monotone-Date: 2005-08-08T20:35:50
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,12 @@
-$Id: history.txt,v 1.222 2005/08/03 13:58:13 jrandom Exp $
+$Id: history.txt,v 1.223 2005/08/07 14:31:58 jrandom Exp $
+
+* 2005-08-08  0.6.0.2 released
+
+2005-08-08  jrandom
+    * Add a configurable throttle to the number of concurrent outbound SSU
+      connection negotiations (via i2np.udp.maxConcurrentEstablish=4).  This
+      may help those with slow connections to get integrated at the start.
+    * Further fixlets to the streaming lib
 
 2005-08-07  Complication
     * Display the average clock skew for both SSU and TCP connections
